@@ -1,6 +1,8 @@
 lib/Acme/MetaSyntactic/Themes/Abigail.pm
+lib/Acme/MetaSyntactic/all_in_the_family.pm
 lib/Acme/MetaSyntactic/beatles.pm
 lib/Acme/MetaSyntactic/bee_gees.pm
+lib/Acme/MetaSyntactic/candyland.pm
 lib/Acme/MetaSyntactic/charlies_angels.pm
 lib/Acme/MetaSyntactic/cluedo.pm
 lib/Acme/MetaSyntactic/compass.pm
@@ -13,6 +15,7 @@ lib/Acme/MetaSyntactic/nehi.pm
 lib/Acme/MetaSyntactic/noughts_and_crosses.pm
 lib/Acme/MetaSyntactic/shou_dou_qi.pm
 lib/Acme/MetaSyntactic/sodor.pm
+lib/Acme/MetaSyntactic/southpark.pm
 lib/Acme/MetaSyntactic/willy_wonka.pm
 Makefile.PL
 MANIFEST
