@@ -1,3 +1,6 @@
+Version 2012060701 Thu Jun  7 00:59:53 CEST 2012
++ New themes: all_in_the_family, candyland, southpark.
+
 Version 2012060201 Sat Jun  2 01:49:14 CEST 2012
 + New theme: kodokan
 
